@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2025 The Thingsboard Authors
+ * Copyright © 2016-2026 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -49,9 +49,6 @@ import static org.thingsboard.server.dao.model.ModelConstants.RELATION_TYPE_GROU
 import static org.thingsboard.server.dao.model.ModelConstants.RELATION_TYPE_PROPERTY;
 import static org.thingsboard.server.dao.model.ModelConstants.VERSION_COLUMN;
 
-/**
- * Created by Valerii Sosliuk on 5/29/2017.
- */
 @Slf4j
 @Component
 @SqlDao
@@ -256,9 +253,7 @@ public class JpaRelationDao extends JpaAbstractDaoListeningExecutorService imple
 
         if (!CollectionUtils.isEmpty(relationTypeGroups)) {
             sqlBuilder.append("AND relation_type_group IN (?");
-            for (int i = 1; i < relationTypeGroups.size(); i++) {
-                sqlBuilder.append(", ?");
-            }
+            sqlBuilder.append(", ?".repeat(Math.max(0, relationTypeGroups.size() - 1)));
             sqlBuilder.append(")");
             params.addAll(relationTypeGroups);
         }
@@ -285,12 +280,12 @@ public class JpaRelationDao extends JpaAbstractDaoListeningExecutorService imple
                     relation.setTypeGroup(RelationTypeGroup.valueOf((String) relationTypeGroup));
                     relation.setVersion((Long) version);
                     return relation;
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 
     @Override
     public List<EntityRelation> findRuleNodeToRuleChainRelations(RuleChainType ruleChainType, int limit) {
         return DaoUtil.convertDataList(relationRepository.findRuleNodeToRuleChainRelations(ruleChainType, PageRequest.of(0, limit)));
     }
+
 }
